--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "react-snap",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,18 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "react-snap": "^1.23.0",
     "vite": "^5.4.8"
+  },
+  "reactSnap": {
+    "source": "dist",
+    "include": [
+      "/",
+      "/waktusolat",
+      "/waktusolat/privacy",
+      "/waktusolat/terms",
+      "/waktusolat/support",
+      "/404"
+    ]
   }
 }
