--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "postbuild": "react-snap",
+    "build": "vite build && vite build --ssr src/entry-server.jsx && node scripts/prerender.mjs",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,18 +16,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "react-snap": "^1.23.0",
     "vite": "^5.4.8"
-  },
-  "reactSnap": {
-    "source": "dist",
-    "include": [
-      "/",
-      "/waktusolat",
-      "/waktusolat/privacy",
-      "/waktusolat/terms",
-      "/waktusolat/support",
-      "/404"
-    ]
   }
 }
