chore: migrate root to deno fresh

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-node_modules
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Fresh build directory
+_fresh/
+# npm + other dependencies
+node_modules/
+vendor/
+
+
+# OS/IDE
 .DS_Store
-.vite
-/dist
-/dist-ssr
+.vscode/
