--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "types": "tsc --noEmit"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
